# redirector

./: Main.hs  flake.nix  redirector.cabal
.github/workflows/: cabal.yml
